src/test/ui/parser/issues/issue-76437-const-async.stderr
error: expected one of `extern`, `fn`, or `unsafe`, found keyword `pub`
  --> $DIR/issue-76437-const-async.rs:4:17
   |
LL |     const async pub fn t() {}
   |     ------------^^^
   |     |           |
   |     |           expected one of `extern`, `fn`, or `unsafe`
   |     help: visibility `pub` must come before `const async`: `pub const async`

error: aborting due to previous error

